@@ -27,11 +27,6 @@ cat > .xsession << EOF
 
 # Step 1: Set up any environment variables you want here.
 
-# Remove the # from the start of the next 2 lines if you want anti-aliased
-# fonts (in applications which support them).
-#GDK_USE_XFT=1; export GDK_USE_XFT
-#QT_XFT=1; export QT_XFT
-
 if [ -d "\${HOME}/bin" ]; then
 	PATH="\${HOME}/bin:\${PATH}"
 	export PATH
