@@ -11,6 +11,8 @@ icewm
 blackbox
 fluxbox
 metacity
+xfwm4
+xfwm
 kwin
 kwm
 fvwm2
